--- a/style.css
+++ b/style.css
@@ -1,3 +1,59 @@
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 14px;
+  }
+
+  #container {
+    height: auto;
+    position: static;
+    flex-direction: row;
+    padding: 16px;
+  }
+
+  nav ul li {
+    margin-right: 10px;
+  }
+
+  #hero {
+    margin-top: 120px;
+    margin-bottom: 60px;
+  }
+
+  section {
+    padding: 20px;
+  }
+
+  .feature-item,
+  .pricing-item {
+    flex-basis: 100%;
+  }
+
+  #pricing {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pricing-item {
+    margin-bottom: 40px;
+  }
+
+  #contact {
+    width: 100%;
+    margin-top: 60px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .feature-item img {
+    max-width: 100%;
+    height: 50%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .feature-item img {
+    max-width: 100%;
+    height: 50%;
+  }}
 body {
   font-family: Arial, sans-serif;
   background-color: rgb(242, 217, 221);
